# nmea-gps

./: README.md  pyproject.toml
gps_nmea/: __init__.py  connector.py
tests/: test_connector.py
