[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gps-nmea"
version = "0.1.0"
description = "NMEA GPS connector for Garmin 18x and compatible receivers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/tuusuario/gps-nmea"
Issues = "https://github.com/tuusuario/gps-nmea/issues"

[tool.hatch.build.targets.wheel]
packages = ["gps_nmea"]